force-app/main/default/objects/ProgramaEvaluacion__c/ProgramaEvaluacion__c.object-meta.xml
<CustomObject>
    <description>Cada programa define los tipos de evalucaciones que quedaran reflejados como columnas del boletin. 
Cada materia pondra sus notas, ya sean conceptuales o numericas de acuerdo a esta definicion</description>
    <label>Evaluacion de un Programa</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evaluaciones de los programas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>