force-app/main/default/objects/ProgramaEvaluacion__c/fields/Campo__c.field-meta.xml
<CustomField>
    <fullName>Campo__c</fullName>
    <label>Campo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nota1__c</fullName>
                <label>Nota1</label>
            </value>
            <value>
                <fullName>Nota2__c</fullName>
                <label>Nota2</label>
            </value>
            <value>
                <fullName>Nota3__c</fullName>
                <label>Nota3</label>
            </value>
            <value>
                <fullName>Nota4__c</fullName>
                <label>Nota4</label>
            </value>
            <value>
                <fullName>Nota5__c</fullName>
                <label>Nota5</label>
            </value>
            <value>
                <fullName>Conceptual1__c</fullName>
                <label>Conceptual1</label>
            </value>
            <value>
                <fullName>Conceptual2__c</fullName>
                <label>Conceptual2</label>
            </value>
            <value>
                <fullName>Conceptual3__c</fullName>
                <label>Conceptual3</label>
            </value>
            <value>
                <fullName>Conceptual4__c</fullName>
                <label>Conceptual4</label>
            </value>
            <value>
                <fullName>Conceptual5__c</fullName>
                <label>Conceptual5</label>
            </value>
            <value>
                <fullName>Opcion1</fullName>
            </value>
            <value>
                <fullName>Opcion2</fullName>
            </value>
            <value>
                <fullName>Opcion3</fullName>
            </value>
            <value>
                <fullName>Opcion4</fullName>
            </value>
            <value>
                <fullName>Opcion5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>