force-app/main/default/objects/ProgramaEvaluacion__c/fields/Opciones__c.field-meta.xml
<CustomField>
    <fullName>Opciones__c</fullName>
    <label>Opciones</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>