force-app/main/default/objects/ProgramaEvaluacion__c/fields/Orden__c.field-meta.xml
<CustomField>
    <fullName>Orden__c</fullName>
    <label>Orden</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>