force-app/main/default/objects/ProgramaEvaluacion__c/fields/Programa__c.field-meta.xml
<CustomField>
    <fullName>Programa__c</fullName>
    <label>Programa</label>
    <referenceTo>Programa__c</referenceTo>
    <relationshipLabel>Evaluaciones de los programas</relationshipLabel>
    <relationshipName>ProgramaEvaluaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>