force-app/main/default/objects/ProgramaEvaluacion__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Las notas son valoraciones numericas del 1 al 10, mientras que las conceptuales son listas de valoraciones por ejemplo Insuficiente, Regular. Bien, Muy Bien y Excelente.</description>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nota</fullName>
            </value>
            <value>
                <fullName>Conceptual</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Opcion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>