force-app/main/default/objects/ProgramaEvaluacion__c/fields/TipoEvaluacion__c.field-meta.xml
<CustomField>
    <fullName>TipoEvaluacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Evaluacion</label>
    <referenceTo>TipoEvaluacion__c</referenceTo>
    <relationshipLabel>Evaluaciones de los programas</relationshipLabel>
    <relationshipName>EvaluacionesProgramas</relationshipName>
    <type>Lookup</type>
</CustomField>